folder name cjh=hange

--- a/UaaFrontend/index.html
+++ b/UaaFrontend/index.html
@@ -1,11 +1,3 @@
 <body>
-    <h1>
-        Fligts
-    </h1>
-    <p>
-        <h2>Info from Endoint</h2>
-        <h4>
-
-        </h4>
-    </p>
+    <h1>Fligths</h1>
 </body>
